--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,6 @@
-<div class="paper container">
+<div class="paper container index">
     <div class="row text-title">
+        
         <h1>D&amp;D Character Manager</h1>
     </div>
     <div class="row main-btn">
