--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,8 @@
-<div class="paper container index">
+<div class="paper container">
     <div class="row text-title">
-        
         <h1>D&amp;D Character Manager</h1>
     </div>
-    <div class="row main-btn">
+    <div class="row flex-center main-btn">
         <div class="col">
             {{#unless user}}
             <button id="login-btn">Login</button>
