--- a/views/campaigns.handlebars
+++ b/views/campaigns.handlebars
@@ -116,8 +116,10 @@
                 </div>
                 <div class="row">
                   <div class="col-12 col">
-                    <label for="shield">Shield</label>
+                    <fieldset class="form-group">
+                    <label for="shield" class="paper-check">Shield</label>
                     <input type="checkbox" name="shield" id="shield">
+                    </fieldset>
                   </div>
                 </div>
                 <div class="row">
