--- a/views/campaigns.handlebars
+++ b/views/campaigns.handlebars
@@ -197,7 +197,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col">
+                <div class="col" id="attack-stat-choice-area">
                   <fieldset class="form-group">
 
                     <label for="attack-stat-choice1" class="paper-radio">
@@ -292,8 +292,8 @@
             <div class="col-4 col option-pane">
               <fieldset id="weapon-choice" class="form-group">
 
-                <label for="dmgType1" class="paper-radio">
-                  <input type="radio" name="weapon-choices" id="dmgType1" value="equipped-weapon">
+                <label for="damageType1" class="paper-radio">
+                  <input type="radio" name="weapon-choices" id="damageType1" value="equipped-weapon">
                   <span>Equipped Weapon</span>
                 </label>
 
